<resources>
    <string name="app_name">Assignment1</string>
    <string name="action_settings">Settings</string>
        <string name="n1">1</string>
        <string name="n2">2</string>
        <string name="n3">3</string>
        <string name="n4">4</string>
        <string name="n5">5</string>
        <string name="n6">6</string>
        <string name="n7">7</string>
        <string name="n8">8</string>
        <string name="n9">9</string>
        <string name="n0">0</string>
        <string name="add_operator">+</string>
        <string name="divide_operator">/</string>
        <string name="subtract_operator">-</string>
        <string name="multiply_operator">*</string>
        <string name="clear">C</string>
        <string name="total">=</string>
        <string name="nextFragbuttontxt">ADVANCED - WITH HISTORY</string>
</resources>