<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workingsTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="86dp"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7">

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/number1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/number2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/number3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n3"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/operatorAdd"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/add_operator"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/number4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/number5"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n5"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/number6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n6"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/operatorSubtract"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/subtract_operator"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/number7"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n7"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/number8"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n8"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/number9"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n9"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/operatorMultiply"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/multiply_operator"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <Button
                android:id="@+id/functionClear"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/clear"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/number0"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/n0"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/operatorEqual"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/total"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/operatorDivide"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/divide_operator"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <Button
                android:id="@+id/nextFragbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="13dp"
                android:minHeight="48dp"
                android:text="@string/nextFragbuttontxt"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/resultTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>